--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
-    <p>Hello World.</p>
-
+    <head>
+        <title>Job Finder</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+            <p>Hello World.</p>    
+    </body>
 </html>
