--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/1bad97303f.js" crossorigin="anonymous"></script>
     </head>
     <body>
-            <p>Hello World.</p>    
+        <div class="container">
+            <header>
+                <nav>
+                    <div class="nav-container">
+                        <img id="logo" src="img/logo.png" alt="JobFinder"
+
+                    </div>
+                </nav>
+            </header>
+        </div>
     </body>
 </html>
